Tue Mar 13 15:01:12 2001  Minero Aoki  <aamine@dp.u-netsurf.ne.jp>

	* lib/net/http.rb: add HTTPRequest#basic_auth.

	* lib/net/smtp.rb: raise if only account or password is given.

	* lib/net/protocol.rb: WriteAdapter#<< returns self.

Tue Mar 13 14:41:16 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (argf_seek): wrong calling sequence of rb_io_seek().

Mon Mar 12 18:59:38 2001  WATANABE Hirofumi  <eban@ruby-lang.org>

	* lib/mkmf.rb (create_makefile): save/restore $libs and $LIBPATH.

Sun Mar 11 00:55:31 2001  WATANABE Hirofumi  <eban@ruby-lang.org>

	* lib/mkmf.rb (install_rb): fix handling of destination path.

Sat Mar 10 02:34:18 2001  WATANABE Hirofumi  <eban@ruby-lang.org>

	* math.c (math_log, math_log10): use nan() instead of 0.0/0.0 on Cygwin.

Thu Mar  8 17:43:59 2001  Minero Aoki  <aamine@dp.u-netsurf.ne.jp>

	* lib/net/protocol.rb: one write(2) per one line.

Wed Mar  7 14:26:11 2001  WATANABE Hirofumi  <eban@ruby-lang.org>

	* math.c (math_log, math_log10): should return NaN if x < 0.0
	  on Cygwin.

Thu Mar  7 10:31:26 2001  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* parse.y (stmt): while/until modifier must work for empty body.

Tue Mar  6 22:53:58 2001  Kazuhiro Yoshida   <moriq.kazuhiro@nifty.ne.jp>

	* ruby.c (ruby_set_argv): clear ARGV contents before adding args.

Tue Mar  6 10:50:29 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (primary): rescue and ensure clauses should be allowed
	  to appear in singleton method body.

Mon Mar  5 17:25:13 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (proc_eq): compare Procs using blocktag equality.

	* eval.c (proc_to_s): stringify according to block tag address.

Mon Mar  5 17:19:56 2001  WATANABE Hirofumi  <eban@ruby-lang.org>

	* win32/win32.c (gettimeofday): use GetLocalTime() instead of ftime()
	  for high-resolution timing.

Sun Mar  4 20:45:20 2001  Akinori MUSHA  <knu@iDaemons.org>

	* ext/extmk.rb.in, lib/mkmf.rb: add C++ rules in addition to C
	rules.
